# Neo

./: .gitignore  Cargo.toml  README.md  run_1070ti_sparse_stress.bat
crates/neo-app/: Cargo.toml
crates/neo-app/src/: lib.rs
crates/neo-cli/: Cargo.toml
crates/neo-cli/src/: main.rs
crates/neo-lang/: Cargo.toml
crates/neo-lang/src/: lib.rs
crates/neo-runtime/: Cargo.toml
crates/neo-runtime/src/: cuda.rs  diagnostics.rs  draw.rs  interop.rs  lib.rs  resources.rs
crates/neo-runtime/src/runtime/: compiler_compile.rs  compiler_diagnostics.rs  compiler_paths.rs  compiler_search_path.rs  context.rs  context_device.rs  cuda_prelude.rs  d3d12_external.rs  draw_contract.rs  draw_culling.rs  draw_device.rs  draw_policy.rs  draw_policy_config.rs  draw_policy_core.rs  draw_recipes.rs  draw_streams.rs  draw_target.rs  error.rs  image.rs  instance_uploads.rs  kernel.rs  material_abi.rs  material_bindings.rs  material_contracts.rs  material_kernel.rs  material_requirements.rs  material_stream_packing.rs  material_stream_uploads.rs  memory.rs  memory_device.rs  memory_fence.rs  memory_host.rs  mesh_uploads.rs  module.rs  resource_helpers.rs  resource_packing.rs  resource_types.rs  resource_uploads.rs  shared_draw_streams.rs  shared_frames.rs  (+7 more)
docs/: v0.md
examples/: gradient.neo
examples/friendly-demo/: Cargo.toml
examples/friendly-demo/src/: main.rs
examples/live-window/: Cargo.toml  README.md  live.neo
examples/live-window/src/: game2d.rs  lib.rs  live_options.rs  main.rs  presenters.rs
examples/mesh-buffer/: raster.neo
examples/simple-2d-game/: Cargo.toml
examples/simple-2d-game/src/: main.rs
examples/stress-quads/: Cargo.toml  hardware_raster.neo  million_quads.neo  three_d_instances.neo  three_d_instances_baseline.neo  three_d_instances_cuda_raster_aosoa32.neo  three_d_instances_fast.neo  three_d_instances_macrocell_aosoa32.neo  three_d_instances_macrocell_textured.neo  three_d_instances_macrocell_textured_pascal_aosoa32.neo  three_d_instances_tiled.neo  three_d_instances_tiled_aosoa32.neo  three_d_instances_tiled_aosoa64.neo
examples/stress-quads-3d/: Cargo.toml
examples/stress-quads-3d/src/: main.rs
examples/stress-quads/src/: main.rs
tools/: quad_stress_perf.ps1
