[package]
name = "neo-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
neo-lang.workspace = true
neo-runtime = { workspace = true, default-features = false }

[features]
default = ["cuda-13000"]
cuda-12060 = ["neo-runtime/cuda-12060"]
cuda-13000 = ["neo-runtime/cuda-13000"]
