[package]
name = "neo-live-window"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cudarc.workspace = true
neo-lang.workspace = true
neo-runtime.workspace = true
notify.workspace = true
raw-window-handle.workspace = true
windows.workspace = true
windows-sys.workspace = true
winit.workspace = true
