[package]
name = "neo-live-window"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
cudarc.workspace = true
neo-lang.workspace = true
neo-runtime = { workspace = true, default-features = false }
notify.workspace = true
raw-window-handle.workspace = true
windows.workspace = true
windows-sys.workspace = true
winit.workspace = true

[features]
default = ["cuda-13000"]
cuda-12060 = ["cudarc/cuda-12060", "neo-runtime/cuda-12060"]
cuda-13000 = ["cudarc/cuda-13000", "neo-runtime/cuda-13000"]
